--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.39.0
-pandas==2.2.2
-requests==2.32.3
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.32
-python-dateutil==2.9.0.post0
-matplotlib==3.9.2
+streamlit
+pandas
+requests
+sqlalchemy
+psycopg[binary]==3.2.3
+python-dateutil
+matplotlib
